--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,17 @@ version = "0.1.0"
 authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
 
 [dependencies]
-fang_oost = "0.7.0"
+fang_oost = "0.8.0"
 num-complex = "0.2"
 rayon = "1.0.1"
 cf_functions = "0.6.2"
-ws = "*"
+serde_json = "1.0"
+serde = "1.0"
+serde_derive = "1.0"
+
+[[bin]]
+name = "loan_cf"
+path = "src/bin/loan_cf.rs"
+[[bin]]
+name = "distribution_invert"
+path = "src/bin/distribution_invert.rs"
