--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,6 @@ serde_derive = "1.0"
 [[bin]]
 name = "loan_cf"
 path = "src/bin/loan_cf.rs"
-[[bin]]
-name = "distribution_invert"
-path = "src/bin/distribution_invert.rs"
+# [[bin]]
+# name = "distribution_invert"
+# path = "src/bin/distribution_invert.rs"
