--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,7 @@ fang_oost = "0.8.0"
 num-complex = "0.2"
 rayon = "1.0.1"
 cf_functions = "0.6.2"
-serde_json = "1.0"
-serde = "1.0"
-serde_derive = "1.0"
+rand = "0.5"
 
 [[bin]]
 name = "loan_cf"
