--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,18 @@ version = "0.1.0"
 authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
 
 [dependencies]
-fang_oost = "0.8.0"
+fang_oost = "0.12.0"
 num-complex = "0.2"
 rayon = "1.0.1"
 cf_functions = "0.6.2"
+cf_dist_utils = "0.3.0"
 rand = "0.5"
+serde_json = "1.0"
+serde = "1.0"
+serde_derive = "1.0"
+
+[dev-dependencies]
+approx = "0.2.0"
 
 [[bin]]
 name = "loan_cf"
