--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,10 @@ num-complex = "0.2"
 rayon = "1.0.1"
 cf_functions = "0.10.0"
 cf_dist_utils = "0.7.2"
-rand = "0.5"
 serde_json = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
+probability = "0.15.12"
 [dev-dependencies]
 approx = "0.2.0"
 itertools = "0.8"
