--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "loan_ec"
-version = "0.1.4"
+version = "0.2.0"
 authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
 homepage = "https://github.com/phillyfan1138/loan_ec"
 repository = "https://github.com/phillyfan1138/loan_ec"
 readme = "README.md"
 license = "MIT"
 description = "A library for providing loan level EC measures."
+edition = "2018"
 
 [dependencies]
 num-complex = "0.2"
